--- a/bd/config
+++ b/bd/config
@@ -2,7 +2,7 @@
     "conexion": {
       "server" : "localhost",
       "user" : "root",
-      "password" : "root",
+      "password" : "jazch080301",
       "database" : "petLoverDB"
     }
 }
